## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = VoomMath VoomMath/Test Geometry Material Material/Test Quadrature \
	  Quadrature/Test Shape Shape/Test Element Element/Test  HalfEdgeMesh HalfEdgeMesh/Test  \
	  Mesh Mesh/Test Model Model/Test Solver Solver/Test
#	  Utils/inpParser   \
#	  Source/IonicSource Source/MechanicsLoad
