## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = 	VoomMath			\
	  	VoomMath/Test			\
	  	Geometry			\
     	  	Potential			\
	  	Material			\
		Material/MechanicsMaterial	\
		Material/Test			\
		Material/ViscousMaterial	\
		Material/ViscousMaterial/Test	\
	  	Quadrature			\
	  	Quadrature/Test			\
	  	Shape				\
	  	Shape/Test			\
	  	Element				\
	  	Element/Test			\
	  	HalfEdgeMesh			\
	  	HalfEdgeMesh/Test		\
	  	Mesh				\
	  	Mesh/Test			\
	  	Model				\
	  	Solver				\
	  	Solver/Test			\
	  	Geometry			\
	  	Output				\
	  	Output/Test
