## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = 	VoomMath			\
	  	VoomMath/Test			\
	  	Geometry			\
                Potential			\
	  	Material			\
		Material/ViscousMaterial	\
		Material/MechanicsMaterial	\
		Material/PairMaterial		\
		Material/PairMaterial/Test	\
		Material/Test			\
		Material/ViscousMaterial/Test	\
	  	Quadrature			\
	  	Quadrature/Test			\
	  	Shape				\
	  	Shape/Test			\
	  	Element				\
	  	Element/Test			\
	  	HalfEdgeMesh			\
	  	HalfEdgeMesh/Test		\
	  	Mesh				\
	  	Mesh/Test			\
		Body				\
		Body/Test			\
	  	Model				\
	  	Model/Test			\
		Solver				\
	  	Solver/Test			\
	  	Geometry			\
	  	Output				\
	  	Output/Test
