## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../					\
	 	-I./../VoomMath/ -I./../Shape		\
		-I./../Element/ -I./../Quadrature	\
		-I/u/local/apps/eigen/current/include/eigen3      

lib_LIBRARIES=libMesh.a
libMesh_a_SOURCES = Mesh.cc FEMesh.cc
