## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../	-I./../VoomMath			\
		-I/u/local/apps/eigen/current/include/eigen3 

lib_LIBRARIES=libQuadrature.a
libQuadrature_a_SOURCES = HexQuadrature.cc LineQuadrature.cc QuadQuadrature.cc TetQuadrature.cc
