## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../					\
		-I./../../				\
	 	-I./../../VoomMath 			\
		-I/u/local/apps/eigen/3.2.4/gcc-4.4.7/include/eigen3
# -I/u/home/l/luigiemp/project-cardio/Program/eigenInst/include/eigen3

lib_LIBRARIES=libPairMaterial.a
libPairMaterial_a_SOURCES = PairMaterial.cc Harmonic.cc Quartic.cc
