## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../					\
		-I./../../				\
	 	-I./../../VoomMath/ 			\
		-I/u/local/apps/eigen/3.2.4/gcc-4.4.7/include/eigen3

lib_LIBRARIES= libViscousMaterial.a
libViscousMaterial_a_SOURCES = NewtonianViscousPotential.cc 
